--- a/frontend/views/admin/admin.ejs
+++ b/frontend/views/admin/admin.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-  <%- include('partials/header') %>
+  <%- include('../partials/header') %>
 
   <main class="container">
     <h1>Admin Dashboard</h1>
@@ -39,6 +39,6 @@
     </div>
   </main>
 
-  <%- include('partials/footer') %>
+  <%- include('../partials/footer') %>
 </body>
 </html>
