--- a/frontend/views/admin/newProduct.ejs
+++ b/frontend/views/admin/newProduct.ejs
@@ -29,10 +29,10 @@
       <input type="text" name="category" required>
 
       <label>Image URLs (up to 4)</label>
-      <input type="text" name="images" placeholder="Image 1" required>
-      <input type="text" name="images" placeholder="Image 2">
-      <input type="text" name="images" placeholder="Image 3">
-      <input type="text" name="images" placeholder="Image 4">
+      <input type="text" name="images[]" placeholder="Image 1" required>
+      <input type="text" name="images[]" placeholder="Image 2">
+      <input type="text" name="images[]" placeholder="Image 3">
+      <input type="text" name="images[]" placeholder="Image 4">
 
       <label>Stock</label>
       <input type="number" name="stock" required>
