--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -22,11 +22,12 @@
     <div class="product-grid">
       <% products.slice(0, 3).forEach(product => { %>
         <div class="product-card">
-          <img src="<%= product.imageUrl %>" alt="<%= product.name %>">
-          <h3><%= product.name %></h3>
-          <p>$<%= product.price.toFixed(2) %></p>
-          <a href="/shop/<%= product._id %>" class="btn">View Shirt</a>
+            <img src="<%= product.images[0] %>" alt="<%= product.name %>">
+            <h3><%= product.name %></h3>
+            <p>$<%= product.price.toFixed(2) %></p>
+            <a href="/shop/<%= product._id %>" class="btn">View Shirt</a>
         </div>
+
       <% }) %>
     </div>
   </section>
