--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | Venture Creations</title>
   <link rel="stylesheet" href="/css/styles.css" />
-  <script src="../public/scripts/home.js"></script>
+  <script src="../public/scripts/home.js" defer></script>
 </head>
 <body>
   <%- include('partials/header') %>
