--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -6,6 +6,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/shop">Shop</a></li>
         <li><a href="/contact">Contact</a></li>
+        <li><a href="/cart" class="cart-link">🛒 Cart</a></li>
 
         <% if (user && user.email === process.env.ADMIN_EMAIL) { %>
           <li><a href="/admin">Admin</a></li>
