--- a/frontend/views/shop/product.ejs
+++ b/frontend/views/shop/product.ejs
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="product-info">
+    <div class="product-page">
       <h1><%= product.name %></h1>
       <p class="price">$<%= product.price.toFixed(2) %></p>
       <p class="category"><%= product.category %></p>
