--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -7,12 +7,16 @@
         <li><a href="/shop">Shop</a></li>
         <li><a href="/contact">Contact</a></li>
 
-        <% if (user && user.email === process.env.ADMIN_EMAIL) { %>
-          <li><a href="/admin">Admin</a></li>
-          <li><a href="/logout">Logout</a></li>
+        <% if (user) { %>
+          <span>Welcome, <%= user.name %>!</span>
+          <% if (user.role === "Admin") { %>
+            <a href="/admin">Admin Panel</a>
+          <% } %>
+          <a href="/auth/logout">Logout</a>
         <% } else { %>
-          <li><a href="/auth/google">Login</a></li>
+          <a href="/auth/google">Login</a>
         <% } %>
+
 
         <a href="/cart" class="cart-icon">
             🛒
