--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <header class="site-header">
   <div class="container">
-    <h1 class="logo"><a href="/">Venture Creations</a></h1>
+    <div class="logo-container">
+      <img src="/images/VentureCreations.webp" alt="Venture Creations Logo" class="vc-logo">
+    </div>
 
     <nav class="main-nav">
       <ul>
