--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | Venture Creations</title>
   <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnH2N1+pzpB3ZT9TZfE09aYUI+ZK+URME9A6z2o5ChqbkBa9tF+uyVBGX1rYt9MwuyJJkzL0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="/scripts/home.js" defer></script>
 </head>
 <body>
