--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -20,6 +20,34 @@
       </div>
     </section>
 
+    <section class="banner-images">
+      <div class="banners-home">
+        <div class="banner-item">
+          <img src="/images/banner2.webp" alt="Banner 2">
+          <div class="banner-text">
+            <span class="line-top r1c1">Custom</span>
+            <span class="line-middle r2c1">Missionary<br>Shirts</span>
+            <span class="line-bottom r3c1">Shop Now</span>
+          </div>
+        </div>
+        <div class="banner-item">
+          <img src="/images/banner1.webp" alt="Banner 1">
+          <div class="banner-text">
+            <span class="line-top r1c2">Custom</span>
+            <span class="line-middle r2c2">Group<br>Shirts</span>
+            <span class="line-bottom r3c2">Shop Now</span>
+          </div>
+        </div>
+        <div class="banner-item">
+          <img src="/images/banner3.webp" alt="Banner 3">
+          <div class="banner-text">
+            <span class="line-top r1c3">Custom</span>
+            <span class="line-middle r2c3">Business<br>Shirts</span>
+            <span class="line-bottom r3c3">Shop Now</span>
+          </div>
+        </div>
+    </section>
+
     <section class="featured-section container">
       <h2>Newly Added Designs</h2>
       <div class="product-grid">
