--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -48,6 +48,12 @@
         </div>
     </section>
 
+    <section>
+      <div>
+        
+      </div>
+    </section>
+
     <section class="featured-section container">
       <h2>Newly Added Designs</h2>
       <div class="product-grid">
