--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -50,7 +50,16 @@
 
     <section>
       <div>
-        
+        <img srce="/images/shipping.png">
+      </div>
+      <div>
+        <img srce="/images/thumbup.png">
+      </div>
+      <div>
+        <img srce="/images/bulk.png">
+      </div>
+      <div>
+        <img srce="/images/customizable.png">
       </div>
     </section>
 
