--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -48,18 +48,26 @@
         </div>
     </section>
 
-    <section>
-      <div>
-        <img srce="/images/shipping.png">
+    <section class="features-icons">
+      <div class="feature">
+        <img src="/images/shipping.png" alt="Fast Shipping">
+        <p>Fast, Free Shipping</p>
+        <p><em>On orders over $100</em></p>
       </div>
-      <div>
-        <img srce="/images/thumbup.png">
+      <div class="feature">
+        <img src="/images/thumbup.png" alt="Customer Satisfaction">
+        <p>Satisfaction Guarantee</p>
+        <p><em>On All Of Our Products</em></p>
       </div>
-      <div>
-        <img srce="/images/bulk.png">
+      <div class="feature">
+        <img src="/images/bulk.png" alt="Bulk Discounts">
+        <p>Bulk Discounts</p>
+        <p><em>Available On All Products</em></p>
       </div>
-      <div>
-        <img srce="/images/customizable.png">
+      <div class="feature">
+        <img src="/images/customizable.png" alt="Customizable Designs">
+        <p>Customizable Designs</p>
+        <p><em>Available On All Products</em></p>
       </div>
     </section>
 
