--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -84,7 +84,7 @@ body {
 
 .main-nav a:hover {
   text-decoration: underline;
-  color: #2676d8
+  color: #2676d8;
 }
 
 .cart-icon {
@@ -107,7 +107,7 @@ body {
 /* Main Home Page */
 .banner-images {
   padding: 2rem;
-  background-color: #f5f5f5;
+  background-color: #2676d8;
 }
 
 .banners-home {
@@ -192,6 +192,47 @@ body {
   display: block;
   font-size: 1rem;
   text-decoration: underline;
+}
+
+.features-icons {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 2rem;
+  background-color: #2676d8;
+  gap: 2rem;
+}
+
+.feature {
+  flex: 1 1 22%; /* Ensures 4 per row on wide screens */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  min-height: 220px;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.feature img {
+  max-width: 80px;
+  height: 80px;
+  object-fit: contain;
+  margin-bottom: 1rem;
+}
+
+.feature p {
+  font-weight: 600;
+  color: black;
+  font-size: 1rem;
+  min-height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.feature img:hover {
+  transform: scale(1.1);
 }
 
 /* Footer */
