--- a/frontend/views/shop/cart.ejs
+++ b/frontend/views/shop/cart.ejs
@@ -49,7 +49,7 @@
         <h4>Estimated Tax (6.85%): $<%= estimatedTax.toFixed(2) %></h4>
         <h2>Total: $<%= total.toFixed(2) %></h2>
 
-          <button type="submit" class="btn">Checkout with Stripe</button>
+        <button type="button" id="checkout-btn" class="btn">Checkout with Stripe</button>
       </div>
 
     <% } %>
