--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -9,7 +9,8 @@
         <li><a href="/">Home</a></li>
         <li><a href="/shop">Shop</a></li>
         <li><a href="/contact">Contact</a></li>
-
+        <li><a href="/blog">Blog</a></li>
+        
         <% if (user) { %>
           <li class="nav-user">👤 Welcome, <%= user.name.split(" ")[0] %>!</li>
 
