--- a/frontend/views/contact.ejs
+++ b/frontend/views/contact.ejs
@@ -17,7 +17,7 @@
                 <h1>Contact Us</h1>
                 <p>Have a question, special request, or need help with your order? We'd love to hear from you.</p>
 
-                <% if (req.query.success === 'true') { %>
+                <% if (success === 'true') { %>
                 <p class="success-message">Thank you! Your message has been sent.</p>
                 <% } %>
 
